NEW 249869
Fix missing invalidation when scrollbar is destroyed
https://bugs.webkit.org/show_bug.cgi?id=249869
Summary Fix missing invalidation when scrollbar is destroyed
Ahmad Saleem
Reported 2022-12-24 07:48:25 PST
Hi Team, I don't know whether this is needed or it will fix any issue but following is Blink commit: Blink Commit - https://chromium.googlesource.com/chromium/blink/+/f3a2b99c3c2ee5d435c09ceedcd4a1f213c3baf7 WebKit Source - https://searchfox.org/wubkat/source/Source/WebCore/rendering/RenderLayerScrollableArea.cpp#910 & https://searchfox.org/wubkat/source/Source/WebCore/rendering/RenderLayerScrollableArea.cpp#936 Just wanted to raise, if this is needed or not. Thanks!
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-31 07:49:15 PST
Ahmad Saleem
Comment 2 2023-10-11 03:11:49 PDT
Repaint Rects (pre-this change): Tests invalidation when a scrollbar is destroyed. Passes if there is no scrollbar. (repaint rects (rect 0 100 100 200) (rect 0 100 100 100) (rect 0 100 200 200) (rect 0 100 200 200) ) and post this change: Tests invalidation when a scrollbar is destroyed. Passes if there is no scrollbar. (repaint rects (rect 0 100 100 200) (rect 0 100 100 100) (rect 185 100 15 200) (rect 0 100 200 200) (rect 0 100 200 200) ) ____ Now we have an additional 'rect'.
Ahmad Saleem
Comment 3 2023-12-20 19:30:26 PST
PR Attempt for future reference - https://github.com/WebKit/WebKit/pull/19001
Note You need to log in before you can comment on or make changes to this bug.