Fix missing invalidation when scrollbar is destroyed

https://bugs.webkit.org/show_bug.cgi?id=249869
rdar://problem/103790698

Reviewed by NOBODY (OOPS!).

Merge: https://chromium.googlesource.com/chromium/blink/+/f3a2b99c3c2ee5d435c09ceedcd4a1f213c3baf7

This patch adds 'invalidation' prior to scrollbar being destroyed after being marked as damaged.
Prior to this PR, while running test, we don't get repaintRects but post patch, we do.

* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(RenderLayerScrollableArea::setHasHorizontalScrollbar):
(RenderLayerScrollableArea::setHasVerticalScrollbar):
* LayoutTests/fast/repaint/destroy-scrollbar.html: Add Test Case
* LayoutTests/fast/repaint/destroy-scrollbar-expected.txt: Add Test Case Expectation